Resolves: tdf#98436 crash trying To create remote folder before connected

Change-Id: I953167c9b78f9c9eba560390ecef7ccd8e5f1f68
(cherry picked from commit 7d397201060ba71a188b5ef9853984a635e70531)
Reviewed-on: https://gerrit.libreoffice.org/25500
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>